--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,27 @@
 title: Title
-url: ''
+url: ""
 favicon: /images/favicon.ico
 colors:
-  primary-color: '#291B99'
-  secondary-color: '#97D3D3'
+  primary-color: "#338989"
+  secondary-color: "#291B99"
   media-colors:
     - title: media-color-one
-      color: '#CCF5DF'
+      color: "#CCF5DF"
     - title: media-color-two
-      color: '#97D3D3'
+      color: "#97D3D3"
     - title: media-color-three
-      color: '#EAF1F1'
+      color: "#EAF1F1"
     - title: media-color-four
-      color: '#12115A'
+      color: "#12115A"
     - title: media-color-five
-      color: '#8292A6'
+      color: "#8292A6"
 collections:
   collection:
     output: true
 resources_name: News
 description: An Isomer site of the Singapore Government
 permalink: none
-baseurl: ''
+baseurl: ""
 exclude:
   - travis-script.js
   - .travis.yml
@@ -39,7 +39,7 @@ include:
   - _redirects
 defaults:
   - scope:
-      path: ''
+      path: ""
     values:
       layout: page
 custom_css_path: /misc/custom.css
