--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@ logo: /images/MOH_Hires.png
 links:
   - title: Information
     url: /Information/
-  - title: Collection
-    collection: collection
+  - title: Frequently Asked Questions
+    collection: Frequently Asked Questions
   - title: News
     resource_room: true
   - title: Faq
