--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ colors:
     - title: media-color-five
       color: '#8292A6'
 collections:
-  What do I Need to Know:
+  What do I need to know:
     output: true
 resources_name: News
 description: An Isomer site of the Singapore Government
