--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@ logo: /images/MOH_Hires.png
 links:
   - title: Information
     url: /Information/
-  - title: What do I Need to Know
-    collection: What do I Need to Know
+  - title: What do I need to know
+    collection: What do I need to know
   - title: News
     resource_room: true
   - title: Faq
