Pre register now

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@ logo: /images/MOH_Hires.png
 links:
   - title: Health Advisory
     url: /health-advisory/
+  - title: Pre-register Now
+    url: /pre-register-now/
   - title: More info
     url: https://www.moh.gov.sg/covid-19/vaccination
   - title: Faq
