--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,7 @@ colors:
       color: '#12115A'
     - title: media-color-five
       color: '#8292A6'
-collections:
-  What do I need to know:
-    output: true
+collections: {}
 resources_name: News
 description: An Isomer site of the Singapore Government
 permalink: none
