--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ links:
   - title: Health Advisory
     url: /health-advisory/
   - title: More info
-    url: https://www.moh.gov.sg/covid-19/vaccination
+    url: 'https://www.moh.gov.sg/covid-19/vaccination'
   - title: Faq
     url: /faq/
   - title: Contact Us
