--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Vaccine.gov.sg
+title: MOH COVID-19 Vaccination Registration
 url: "https://www.vaccine.gov.sg"
 favicon: /images/favicon.ico
 colors:
