--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,5 @@ links:
     url: "https://www.moh.gov.sg/covid-19/vaccination"
   - title: Faq
     url: /faq/
+  - title: Contact Us
+    url: /contact-us/
