--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: MOH COVID-19 Vaccination Registration
+title: Ministry of Health COVID-19 Vaccination Registration
 url: 'https://www.vaccine.gov.sg'
 favicon: /images/favicon.ico
 colors:
