--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,10 @@ links:
   - title: Health Advisory
     url: /health-advisory/
   - title: More Info
-    url: "https://www.moh.gov.sg/covid-19/vaccination"
+    url: 'https://www.moh.gov.sg/covid-19/vaccination'
   - title: Faq
     url: /faq/
   - title: Contact Us
     url: /contact-us/
+  - title: Guide
+    collection: Guide
