--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,11 +4,9 @@ links:
     url: /how-to-sign-up/
   - title: Health Advisory
     url: /health-advisory/
+  - title: FAQ
+    collection: faq
   - title: More Info
-    url: 'https://www.moh.gov.sg/covid-19/vaccination'
-  - title: Faq
-    url: /faq/
+    url: "https://www.moh.gov.sg/covid-19/vaccination"
   - title: Contact Us
     url: /contact-us/
-  - title: Guide
-    collection: Guide
