--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@ logo: /images/MOH_Hires.png
 links:
   - title: Health Advisory
     url: /health-advisory/
+  - title: Clinics
+    url: /clinic-list/
   - title: FAQ
     collection: faq
   - title: More Info
