--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,6 @@
 contact_us: /contact-us/
 show_reach: false
-feedback: "mailto:MOH_qsm@moh.gov.sg"
+feedback: www.moh.gov.sg/feedback
 faq: /faq
 social_media:
   facebook: null
