organise the nav. make clinic and health advisory sub pages. change collection name

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,9 @@
 logo: /images/MOH_Hires.png
 links:
   - title: How to Sign Up
-    url: /how-to-sign-up/
-  - title: Health Advisory
-    url: /health-advisory/
-  - title: Clinics
-    url: /clinic-list/
+    url: /how-to-sign-up
+  - title: Information
+    collection: information
   - title: FAQ
     url: /faq-en/
   - title: Contact Us
