--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ colors:
     - title: media-color-five
       color: "#8292A6"
 collections:
-  faq:
+  information:
     output: true
 resources_name: News
 description: COVID-19 Vaccination Registration
