--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,7 +1,7 @@
 contact_us: /contact-us/
 show_reach: false
 feedback: "https://crms.moh.gov.sg/mohfeedback.aspx"
-faq: /faq-en
+faq: /faq
 social_media:
   facebook: null
   twitter: null
