--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@ links:
   - title: Information
     collection: information
   - title: FAQ
-    url: /faq-en/
+    url: /faq/
   - title: Contact Us
     url: /contact-us/
