--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ collections:
     output: true
   how-to-sign-up:
     output: true
+  health-advisory-collection:
+    output: true
 resources_name: News
 description: COVID-19 Vaccination Registration
 permalink: none
