--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,5 @@ links:
     url: /contact-us/
   - title: How To Sign Up
     collection: how-to-sign-up
+  - title: Health Advisory Collection
+    collection: health-advisory-collection
