--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ links:
     url: /faq/
   - title: Contact Us
     url: /contact-us/
-  - title: How To Sign Up
-    collection: how-to-sign-up
+  - title: How To Sign Up Collection
+    collection: how-to-sign-up-collection
   - title: Health Advisory Collection
     collection: health-advisory-collection
