--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,13 @@
 logo: /images/MOH_Hires.png
 links:
-  - title: How to Sign Up
-    url: /how-to-sign-up
+  - title: How To Sign Up
+    collection: how-to-sign-up
+  - title: Health Advisory
+    collection: health-advisory
   - title: Information
     collection: information
   - title: FAQ
     url: /faq/
   - title: Contact Us
     url: /contact-us/
-  - title: How To Sign Up Collection
-    collection: how-to-sign-up-collection
-  - title: Health Advisory Collection
-    collection: health-advisory-collection
+
