--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 logo: /images/MOH_Hires.png
 links:
-  - title: How To Sign Up
-    collection: how-to-sign-up
+  - title: How to Sign Up
+    url: /how-to-sign-up/
   - title: Health Advisory
-    collection: health-advisory
+    url: /health-advisory/  
   - title: Information
     collection: information
   - title: FAQ
