move clinic to stand alone page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,9 +5,14 @@ links:
   - title: Health Advisory
     url: /health-advisory/  
   - title: Information
-    collection: information
+    url: /clinic-list
+    sublinks:
+      - title: List of Clinics and Vaccination Centres
+        url: /clinic-list
+      - title: Singapore's COVID-19 Vaccination Programme
+        url: 'https://www.moh.gov.sg/covid-19/vaccination'
   - title: FAQ
-    url: /faq/
+    url: /faq
   - title: Contact Us
     url: /contact-us/
 
