--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 logo: /images/MOH_Hires.png
 links:
   - title: How to Sign Up
-    url: /how-to-sign-up/
+    collection: how-to-sign-up
   - title: Health Advisory
-    url: /health-advisory/
+    collection: health-advisory
   - title: Information
     url: /clinic-list
     sublinks:
