--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/MOH_Hires.png
+logo: /images/logo-vertical.png
 links:
   - title: How to Sign Up
     url: /how-to-sign-up/
@@ -10,7 +10,7 @@ links:
       - title: List of Vaccination Locations
         url: /clinic-list
       - title: Singapore's COVID-19 Vaccination Programme
-        url: "https://www.moh.gov.sg/covid-19/vaccination"
+        url: 'https://www.moh.gov.sg/covid-19/vaccination'
   - title: FAQ
     url: /faq
   - title: Contact Us
