--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/MOH_Hires.png
+logo: /images/MOH-Logo-horizontal-official.jpg
 links:
   - title: How to Sign Up
     url: /how-to-sign-up/
